Trying to point to my server database

--- a/railway-development/synapse-service/Dockerfile
+++ b/railway-development/synapse-service/Dockerfile
@@ -4,8 +4,8 @@ USER root
 
 # Copy configs
 COPY homeserver.yaml /data/homeserver.yaml
-COPY synapse-config/synapse-production-e979.up.railway.app.signing.key /data/synapse-production-e979.up.railway.app.signing.key
-COPY synapse-config/synapse-production-e979.up.railway.app.log.config /data/synapse-production-e979.up.railway.app.log.config
+COPY synapse-config/synape-production.up.railway.app.signing.key /data/synape-production.up.railway.app.signing.key
+COPY synapse-config/synape-production.up.railway.app.log.config /data/synape-production.up.railway.app.log.config
 
 # Set permissions
 RUN chown -R 991:991 /data && chmod -R 755 /data
