--- a/railway-development/synapse-service/synapse-config/synape-production.up.railway.app.log.config
+++ b/railway-development/synapse-service/synapse-config/synape-production.up.railway.app.log.config
@@ -2,28 +2,43 @@ version: 1
 
 formatters:
   precise:
-    
     format: '%(asctime)s - %(name)s - %(lineno)d - %(levelname)s - %(request)s - %(message)s'
-    
+  
+  access_log:
+    format: '%(asctime)s - %(clientip)s - %(clientport)s - %(request_method)s %(request_path)s %(request_protocol)s - %(status_code)s %(response_size)s - %(user_agent)s'
 
 handlers:
-
-
   console:
     class: logging.StreamHandler
     formatter: precise
+    level: INFO
+  
+  access:
+    class: logging.StreamHandler
+    formatter: access_log
+    level: INFO
 
 loggers:
-    # This is just here so we can leave `loggers` in the config regardless of whether
-    # we configure other loggers below (avoid empty yaml dict error).
     _placeholder:
         level: "INFO"
-
     
+    synapse.http.server:
+        level: INFO
+        handlers: [access]
+    
+    synapse.access.http.*(GET|POST|PUT|DELETE):
+        level: INFO
+        handlers: [access]
     
     synapse.storage.SQL:
         # beware: increasing this to DEBUG will make synapse log sensitive
         # information such as access tokens.
+        level: INFO
+    
+    synapse.replication:
+        level: INFO
+    
+    synapse.federation:
         level: INFO
     
 
