--- a/railway-development/synapse-service/synapse-config/synape-production.up.railway.app.log.config
+++ b/railway-development/synapse-service/synapse-config/synape-production.up.railway.app.log.config
@@ -6,49 +6,63 @@ formatters:
   
   access_log:
     format: '%(asctime)s - %(clientip)s - %(clientport)s - %(request_method)s %(request_path)s %(request_protocol)s - %(status_code)s %(response_size)s - %(user_agent)s'
+  
+  debug:
+    format: '[%(levelname)s] %(asctime)s - %(name)s:%(lineno)d - %(message)s'
 
 handlers:
   console:
     class: logging.StreamHandler
     formatter: precise
-    level: INFO
+    level: DEBUG
+    stream: ext://sys.stdout
+  
+  stderr:
+    class: logging.StreamHandler
+    formatter: debug
+    level: WARNING
+    stream: ext://sys.stderr
   
   access:
     class: logging.StreamHandler
     formatter: access_log
     level: INFO
+    stream: ext://sys.stdout
 
 loggers:
     _placeholder:
-        level: "INFO"
+        level: "DEBUG"
+    
+    synapse:
+        level: DEBUG
+        handlers: [console, stderr]
     
     synapse.http.server:
-        level: INFO
-        handlers: [access]
+        level: DEBUG
+        handlers: [access, console]
     
-    synapse.access.http.*(GET|POST|PUT|DELETE):
-        level: INFO
+    synapse.access.http:
+        level: DEBUG
         handlers: [access]
     
     synapse.storage.SQL:
-        # beware: increasing this to DEBUG will make synapse log sensitive
-        # information such as access tokens.
-        level: INFO
+        level: DEBUG
+        handlers: [console]
     
     synapse.replication:
-        level: INFO
+        level: DEBUG
+        handlers: [console]
     
     synapse.federation:
-        level: INFO
+        level: DEBUG
+        handlers: [console]
     
-
-    
+    synapse.database:
+        level: DEBUG
+        handlers: [console]
 
 root:
-    level: INFO
-
-
-    handlers: [console]
-
+    level: DEBUG
+    handlers: [console, stderr]
 
 disable_existing_loggers: false
